# Desktop-xiuxian

./: .gitignore  README.md  golang-chat.go  package-lock.json  package.json  tsconfig.base.json  turbo.json  xiuxian.sql  xiuxian_server.py
ClawMail/: README.md  SKILL.md  agent_listener.py  rbmail  requirements.txt  robotmail-client-v2.py  robotmail-client.py  robotmail-server.py  robotmail_skill.py
ClawMail/config/: agents.json  resources.json
ClawMail/deploy/: Caddyfile  nginx-robotmail.conf
ClawMail/scripts/: README.md  install-client.sh  install-stack.sh  install.sh  monitor.sh  mount-spool.sh  parse_command.py  quick-install.sh  rmail  robotmail-client-v2.py  robotmail-client.py
ClawMail/spool/openclaw/: .heartbeat
ClawMail/systemd/: robotmail-heartbeat.service  robotmail-heartbeat.timer  robotmail-hub.service  robotmail-listener.service
Client2/: Xiuxian.pro  dialog.cpp  dialog.h  ranklist.cpp  secure_transport.h
Client2/Augur/: augurwindow.cpp
Client2/RedisLib/: RedisRoute.cpp
Client2/UpdataInfo/: feedback.cpp
Client2/chatmessage/: conservsocket.cpp
Client2/core/: playerprofilestore.cpp  playerprofilestore.h
Client2/jianghu/: battleai.cpp  jianghuglobal.cpp
Client2/mail/: maildrawer.cpp  mailservice.h  mailstore.h
Client2/network/: playerstatsreporter.cpp  playerstatsreporter.h
Client3/: CMakeLists.txt
Client3/resources/: resources.qrc
Client3/src/: main.cpp  petwindow.cpp  petwindow.h
Client3/src/augur/: augurwindow.cpp  augurwindow.h  guastacked.cpp  guastacked.h
Client3/src/chat/: chatwindow.cpp  chatwindow.h  conservsocket.cpp  conservsocket.h  emojipicker.cpp  emojipicker.h  qnchatmessage.cpp  qnchatmessage.h  wordfilter.cpp  wordfilter.h
Client3/src/core/: gamelogic.cpp  gamelogic.h  playerprofile.h  playerprofilestore.cpp  playerprofilestore.h
Client3/src/jianghu/: battleai.cpp  battleai.h  jhleitai.cpp  jhleitai.h  jianghu.cpp  jianghu.h  jianghuglobal.cpp  jianghuglobal.h  skillbar.cpp  skillbar.h  skilldata.cpp  skilldata.h  userinfo.cpp  userinfo.h
Client3/src/mail/: mailapiclient.cpp  mailapiclient.h  maildrawer.h  mailservice.cpp  mailstore.cpp
Client3/src/network/: apiclient.cpp  apiclient.h
Client3/src/rank/: rankwindow.cpp  rankwindow.h
Client3/src/update/: feedback.cpp  feedback.h  updatechecker.cpp  updatechecker.h
Client3/src/util/: makename.cpp  makename.h  messageshow.cpp  messageshow.h  popupmanager.cpp  popupmanager.h
apps/api/: package.json  tsconfig.json
apps/api/.runtime/social/: social.db
apps/api/src/: index.ts
apps/api/src/lib/: socialMigrations.ts  socialStore.ts
apps/api/src/modules/openclaw/: index.ts
apps/chat-server/: chat_server.py  xiuxian-chat.service
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-qt/: CMakeLists.txt
apps/desktop-qt/src/: PetWidget.cpp  PetWidget.h  main.cpp
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/app/features/chat/: ChatPanel.tsx  MailPanel.tsx
apps/desktop/src/app/features/pet/: PetShell.tsx  PetStatusCard.tsx  personalityProfiles.ts
apps/desktop/src/app/features/shell/: DesktopShellCard.tsx
apps/desktop/src/app/lib/: localOpenClaw.ts  localSkillInstaller.ts  localTransportSecurity.ts  tauriDesktop.ts
apps/desktop/src/app/windows/: ConsoleWindow.tsx  PetWindow.tsx
apps/desktop/src/styles/: app.css
docs/: getting-started.md  qt-to-tauri-migration-checklist.md  tauri-openclaw-architecture.md
infra/env/: api.env.example
tmp-mail/: guide.txt
tmp-mail/skill-demo/: SKILL.md
tmp-mail/skill-smoke/: SKILL.md
